--- a/src/index.css
+++ b/src/index.css
@@ -2,5 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
-
-
+@font-face {
+  font-family: 'Summer Vibes';
+  src: url('./components/assets/fonts/Summer Vibes OTF.otf') format('opentype');
+}
